--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,10 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
-  http: ^1.2.0
+  http: ^1.2.1
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
+  intl: ^0.19.0
 
 
 
