--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   jwt_decoder: ^2.0.1
   intl: ^0.19.0
   provider: ^6.1.2
+  image_picker: ^1.1.0
+  image_picker_android: ^0.8.10
+  image_picker_platform_interface: ^2.10.0
+  permission_handler: ^11.3.1
+  file_picker: ^8.0.2
 
 
 
