--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker_platform_interface: ^2.10.0
   permission_handler: ^11.3.1
   file_picker: ^8.0.2
+  avatars: ^3.0.0
 
 
 
