--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   permission_handler: ^11.3.1
   file_picker: ^8.0.2
   avatars: ^3.0.0
+  syncfusion_flutter_charts: ^25.1.42+1
+  dio: ^5.4.3+1
 
 
 
